--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
-fastapi==0.0.20
-uvicorn==0.40.0
-earthengine-api==1.7.12
-sqlalchemy==2.0.46
-pydantic==2.12.5
-python-dotenv==1.2.1
+fastapi>=0.109.0
+uvicorn>=0.27.0
+earthengine-api>=1.4.0
+sqlalchemy>=2.0.0
+pydantic>=2.5.0
+python-dotenv>=1.0.0
+shapely>=2.0.0
+requests>=2.31.0
+pyproj>=3.6.0
